--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,9 +2,9 @@
 
 ---
 
-#feature_row2 {
-    background-color: #d8d8d8;
-}
+// #feature_row2 {
+//     background-color: #d8d8d8;
+// }
 
 @charset "utf-8";
 
